// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should match the snapshot 1`] = `
<DocumentFragment>
  .HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX c1"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 2`] = `
<DocumentFragment>
  .ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c4[disabled] ~ .c2 {
  color: #999999;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX c1"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      />
    </div>
    <span
      class="ErrorMessage-module__error-message___MWbU-"
    >
      error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 3`] = `
<DocumentFragment>
  .ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c4[disabled] ~ .c2 {
  color: #999999;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        checked=""
        class="HiddenInput-module__hidden-input___GW0sX c1"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      />
    </div>
    <span
      class="ErrorMessage-module__error-message___MWbU-"
    >
      error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 4`] = `
<DocumentFragment>
  .HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

.c4[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        checked=""
        class="HiddenInput-module__hidden-input___GW0sX c1"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 5`] = `
<DocumentFragment>
  .HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

.c4[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX c1"
        disabled=""
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 6`] = `
<DocumentFragment>
  .HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

.c4[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        class="HiddenInput-module__hidden-input___GW0sX c1"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      >
        Some text
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 7`] = `
<DocumentFragment>
  .HiddenInput-module__hidden-input___GW0sX {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.Label-module__label___opfdV {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c3 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c3 a {
  position: relative;
  z-index: 5;
}

.c1 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c2 {
  color: #999999;
}

.c4[disabled] ~ .c2 {
  color: #999999;
}

<div
    class=""
  >
    <div
      class="c0"
    >
      <input
        checked=""
        class="HiddenInput-module__hidden-input___GW0sX c1"
        disabled=""
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CheckIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="Label-module__label___opfdV c2 c3"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;
